{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 868,
  "lineage": "dcded3ad-f127-c2ea-44f6-dbea896a0b93",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ir_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a695f0d95cefc163",
            "arn": "arn:aws:ec2:us-east-2:707040830421:instance/i-0b0a8bae5082ce2a6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b0a8bae5082ce2a6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ir-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c2adecb9e0301ec5",
            "private_dns": "ip-10-0-1-107.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.107",
            "public_ip": "3.142.240.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f8a19360576e7464",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a4df8309e9ecb892",
            "tags": {
              "Name": "ir_ec2_instance-1"
            },
            "tags_all": {
              "Name": "ir_ec2_instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ca5412a1bd7fe727"
            ]
          },
          "dependencies": [
            "module.compute.aws_key_pair.ir_ssh_key_pair",
            "module.infra.aws_security_group.ir_security_group",
            "module.infra.aws_subnet.ir_subnet",
            "module.infra.aws_vpc.ir_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a695f0d95cefc163",
            "arn": "arn:aws:ec2:us-east-2:707040830421:instance/i-0b98e85e6f26dfedb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b98e85e6f26dfedb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ir-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c2e1e01812fe1209",
            "private_dns": "ip-10-0-1-34.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.34",
            "public_ip": "3.16.181.236",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bd962d8ecf115743",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a4df8309e9ecb892",
            "tags": {
              "Name": "ir_ec2_instance-2"
            },
            "tags_all": {
              "Name": "ir_ec2_instance-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ca5412a1bd7fe727"
            ]
          },
          "dependencies": [
            "module.compute.aws_key_pair.ir_ssh_key_pair",
            "module.infra.aws_security_group.ir_security_group",
            "module.infra.aws_subnet.ir_subnet",
            "module.infra.aws_vpc.ir_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a695f0d95cefc163",
            "arn": "arn:aws:ec2:us-east-2:707040830421:instance/i-06488a446dbd04948",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06488a446dbd04948",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ir-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a3dcb890fd1f35f5",
            "private_dns": "ip-10-0-1-113.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.113",
            "public_ip": "13.58.10.31",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07968cbbd385d98a8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a4df8309e9ecb892",
            "tags": {
              "Name": "ir_ec2_instance-3"
            },
            "tags_all": {
              "Name": "ir_ec2_instance-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ca5412a1bd7fe727"
            ]
          },
          "dependencies": [
            "module.compute.aws_key_pair.ir_ssh_key_pair",
            "module.infra.aws_security_group.ir_security_group",
            "module.infra.aws_subnet.ir_subnet",
            "module.infra.aws_vpc.ir_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ir_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:707040830421:internet-gateway/igw-096dec6e591d346f3",
            "id": "igw-096dec6e591d346f3",
            "owner_id": "707040830421",
            "tags": {
              "Name": "ir_internet_gateway"
            },
            "tags_all": {
              "Name": "ir_internet_gateway"
            },
            "vpc_id": "vpc-0b26ca9c17242e2dd"
          },
          "dependencies": [
            "module.infra.aws_vpc.ir_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "ir_network_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:707040830421:network-acl/acl-0174c0b2ff697a988",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "all",
                "rule_no": 200,
                "to_port": 0
              }
            ],
            "id": "acl-0174c0b2ff697a988",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "owner_id": "707040830421",
            "subnet_ids": [],
            "tags": {
              "Name": "ir_network_acl"
            },
            "tags_all": {
              "Name": "ir_network_acl"
            },
            "vpc_id": "vpc-0b26ca9c17242e2dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra.aws_vpc.ir_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "ir_network_acl_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0136aebe9388b0992",
            "network_acl_id": "acl-0174c0b2ff697a988",
            "subnet_id": "subnet-0a4df8309e9ecb892"
          },
          "dependencies": [
            "module.infra.aws_network_acl.ir_network_acl",
            "module.infra.aws_subnet.ir_subnet",
            "module.infra.aws_vpc.ir_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "ir_network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:707040830421:network-interface/eni-033e1f1fc7757bbdb",
            "id": "eni-033e1f1fc7757bbdb",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:eb:50:36:07:2b",
            "owner_id": "707040830421",
            "private_ip": "10.0.1.186",
            "private_ip_list": [
              "10.0.1.186"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.186"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0ca5412a1bd7fe727"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a4df8309e9ecb892",
            "tags": {
              "Name": "ir_network_interface"
            },
            "tags_all": {
              "Name": "ir_network_interface"
            }
          },
          "dependencies": [
            "module.infra.aws_security_group.ir_security_group",
            "module.infra.aws_subnet.ir_subnet",
            "module.infra.aws_vpc.ir_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ir_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:707040830421:route-table/rtb-0c8384405c6da47e8",
            "id": "rtb-0c8384405c6da47e8",
            "owner_id": "707040830421",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-096dec6e591d346f3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ir_route_table"
            },
            "tags_all": {
              "Name": "ir_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b26ca9c17242e2dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra.aws_internet_gateway.ir_internet_gateway",
            "module.infra.aws_vpc.ir_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ir_route_table_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01abb236bb3f09da0",
            "route_table_id": "rtb-0c8384405c6da47e8",
            "subnet_id": "subnet-0a4df8309e9ecb892"
          },
          "dependencies": [
            "module.infra.aws_internet_gateway.ir_internet_gateway",
            "module.infra.aws_route_table.ir_route_table",
            "module.infra.aws_subnet.ir_subnet",
            "module.infra.aws_vpc.ir_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ir_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:707040830421:security-group/sg-0ca5412a1bd7fe727",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0ca5412a1bd7fe727",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "ir_security_group",
            "name_prefix": "",
            "owner_id": "707040830421",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ir_security_group"
            },
            "tags_all": {
              "Name": "ir_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b26ca9c17242e2dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra.aws_vpc.ir_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ir_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:707040830421:subnet/subnet-0a4df8309e9ecb892",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a4df8309e9ecb892",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "707040830421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ir_subnet"
            },
            "tags_all": {
              "Name": "ir_subnet"
            },
            "vpc_id": "vpc-0b26ca9c17242e2dd"
          },
          "dependencies": [
            "module.infra.aws_vpc.ir_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ir_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:707040830421:vpc/vpc-0b26ca9c17242e2dd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08d53f23be784550c",
            "default_route_table_id": "rtb-0a856a7f138782851",
            "default_security_group_id": "sg-0a0f4746ebfceb22c",
            "dhcp_options_id": "dopt-e5f0528e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b26ca9c17242e2dd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a856a7f138782851",
            "owner_id": "707040830421",
            "tags": {
              "Name": "ir_vpc"
            },
            "tags_all": {
              "Name": "ir_vpc"
            }
          }
        }
      ]
    }
  ]
}